# Homework_7/docs/swagger.json
@@ -286,6 +286,52 @@
                 }
             }
         },
+        "/group/create": {
+            "post": {
+                "description": "Insert Group Info",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "group"
+                ],
+                "summary": "Insert Group Info",
+                "parameters": [
+                    {
+                        "description": "Group Info",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.GroupReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
         "/instructor/{id}": {
             "get": {
                 "description": "Get instructor info by ID",
@@ -379,7 +425,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Student"
+                            "$ref": "#/definitions/models.StudentReq"
                         }
                     }
                 ],
@@ -543,6 +589,14 @@
                 }
             }
         },
+        "models.GroupReq": {
+            "type": "object",
+            "properties": {
+                "groupname": {
+                    "type": "string"
+                }
+            }
+        },
         "models.GroupSchedule": {
             "type": "object",
             "properties": {
@@ -608,6 +662,26 @@
                 },
                 "group_name": {
                     "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.StudentReq": {
+            "type": "object",
+            "properties": {
+                "birth_date": {
+                    "type": "string"
+                },
+                "gender": {
+                    "type": "string"
+                },
+                "group_id": {
+                    "type": "integer"
                 },
                 "id": {
                     "type": "integer"
